gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/diag_cstyle.d
version https://git-lfs.github.com/spec/v1
oid sha256:6f787ca760acc0d73405a4517d190c9f2ee6232796133515b34bec3a7c1bece2
size 765
